before the next round of changes

--- a/iTunesWishList/Rakefile
+++ b/iTunesWishList/Rakefile
@@ -6,4 +6,6 @@ Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'iTunesWishList'
   app.device_family = [:ipad]
+  app.info_plist['UILaunchImageFile'] = 'launch'
+  app.identifier = "com.wisdomgroup." + app.name
 end
